<resources>
    <string name="app_name">La Esperanza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_agregar_quiz">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_agregar_pregunta">ScrollingActivity</string>
    <string name="txtusuario">Usuario</string>
    <string name="txtcontra">Contraseña</string>
    <string name="txtentrar">Iniciar Sesión</string>
    <string name="txtresetear_contra">Olvide mi Contraseña</string>
    <string name="txtfseguir_face">Siguenos en Facebook</string>
    <string name="usuario_incorrecto">Usuario o Contraseña Incorrecta</string>
    <string name="keyNameUser">USUARIO</string>
    <string name="keyNamePass">PASS</string>
    <string name="keyNameIntro">firstLaunch</string>
    <string name="campo_requerido">Campo Requerido</string>
    <string name="text_cerrarsesion">Cerrar Sesión</string>
    <string name="confirmar_cerrarsesion">¿Seguro que Desea Cerrar Sesión?</string>
    <string name="no">No</string>
    <string name="txtsearch">Buscar</string>
    <string name="txt_tipoTest">TIPOTEST</string>
    <string name="txt_iniciar">Iniciar al Guardar</string>
    <string name="finalizado">Finalizado</string>
    <string name="preguntas">Preguntas</string>
    <string name="empezar">Empezar</string>
    <string name="sin_datos">No hay %1$s Aún</string>
    <string name="seleccione_la_unidad">Filtar unidad</string>
    <string name="no_hay_unidades_aun">No hay Unidades aun</string>
    <string name="registro_quizz">Agregar quizz</string>
    <string name="no_hay_quizzes_aun">No hay Quizzes Aun</string>
    <string name="tipo_de_respuesta">*Seleccione el tipo de respuesta</string>
    <string name="no_se_han_agregado_quizzes_aun">No se han Agregado Quizzes aun</string>
    <string name="txt_quizzes">Quizzes</string>
    <string name="txt_sin_elementos">No se Encontraron Elementos</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_finalizar">Finalizar</string>
    <string name="txt_enprogreso">En Progreso</string>
    <string name="txt_noiniciado">No Iniciado</string>
    <string name="respuesta">Respuesta</string>
    <string name="opcion">*Elija la opciòn</string>
    <string name="afirmativa">Si</string>
    <string name="negativa">No</string>
    <string name="text_guardar">Guardar</string>
    <string name="seccion_a">A</string>
    <string name="SeccionB">B</string>
    <string name="SeccionC">C</string>
    <string name="error_incomplete_data">Debe Seleccionar una %1$s</string>
    <string name="informacion_personal">Informacion Personal</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="grado">Grado</string>
    <string name="seccion">Sección</string>
    <string name="txtActividades">Actividades</string>
    <string name="informacion_de_usuario">Informacion de Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="texto_predeterminado">Texto Predeterminado</string>
    <string name="nombre_del_quizz">Nombre del Quizz</string>
    <string name="practica">Practica</string>
    <string name="prueba">Prueba</string>
    <string name="txt_estudiantes">Estudiantes</string>
    <string name="txt_actividades">Actividades</string>
    <string name="txt_formulas">Formulas</string>
    <string name="txt_curiosidades">Curiosidades</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_tomar_foto">Tomar Foto</string>
    <string name="face_uri">https://www.facebook.com/heriberto.amador.5</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="txt_agregarPregunta">Agregar Pregunta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_compartir">Compartir</string>
    <string name="txt_favoritos">Añadir a Favoritos</string>
    <string name="txt_siguiente">SIGUIENTE</string>
    <string name="txt_anterior">ANTERIOR</string>
    <string name="txt_finaliza">FINALIZAR</string>
    <string name="txt_salir">Salir</string>
    <string name="keyNameQuiz">Quiz</string>
    <string name="keynameUsuarioQuiz">UsuarioQuiz</string>
    <string name="txt_unidades">Unidades</string>
    <string name="txt_unidad">Unidad</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_editar">Editar</string>
    <string name="txt_operacion">OPERACION</string>
    <string name="txt_opcionRespuesta">Opcion de Respuesta</string>
    <string name="title_activity_respuesta">ScrollingActivity</string>
    <string name="editar_perfil">Editar Perfil</string>
</resources>