<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin"
    tools:context=".AgregarEstuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/infoPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPerfil">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtpersonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/informacion_personal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtnombres"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombres"
                        app:helperText="Requerido*"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtpersonal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtNombres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            app:errorEnabled="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtApellidos"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellidos"
                        app:helperText="Requerido*"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtnombres">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtApellidos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/contenedorGrad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtApellidos">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/grado" />

                        <Spinner
                            android:id="@+id/spGrados"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtSec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/seccion"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/contenedorGrad"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSec">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipSec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            app:chipSpacingHorizontal="16dp"
                            app:chipSpacingVertical="16dp"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/txtSecA"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seccion_a"
                                android:textAlignment="center"
                                android:checkable="true"
                                app:chipBackgroundColor="@color/colorAccent"
                                android:textColor="@android:color/white"
                                />
                            <com.google.android.material.chip.Chip
                                android:id="@+id/txtSecB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/SeccionB"
                                android:textAlignment="center"
                                android:checkable="true"
                                app:chipBackgroundColor="@color/colorAccent"
                                android:textColor="@android:color/white"
                                />
                            <com.google.android.material.chip.Chip
                                android:id="@+id/txtSecC"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/SeccionC"
                                android:textAlignment="center"
                                android:checkable="true"
                                app:chipBackgroundColor="@color/colorAccent"
                                android:textColor="@android:color/white"
                                />
                        </com.google.android.material.chip.ChipGroup>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/infoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoPersonal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtinfoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/informacion_de_usuario"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtUsuario"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtusuario"
                        app:helperText="Requerido*"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtinfoUsuario">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtContra"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtcontra"
                        app:helperText="Requerido*"
                        app:endIconMode="password_toggle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtUsuario">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtContra"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/infoUsuario">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="@dimen/large_padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salir"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="@dimen/large_padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnGuardar"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>