<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <View
        android:id="@+id/topBack"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:background="@drawable/top_backlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/topBack"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/large_padding"
        app:layout_constraintTop_toBottomOf="@+id/topBack">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtusuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtusuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtcontra"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtcontra"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtusuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtcontra"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/txtentrar"
            app:icon="@drawable/ic_account"
            android:padding="@dimen/large_padding"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtcontra" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtresetear_contra"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/btnsesion"
            app:layout_constraintEnd_toEndOf="@+id/btnsesion"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/txtSeguir"
        app:layout_constraintStart_toEndOf="@+id/txtSeguir"
        app:layout_constraintTop_toTopOf="@+id/txtSeguir"
        app:srcCompat="@drawable/facebook_logo" />

    <TextView
        android:id="@+id/txtSeguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/txtfseguir_face"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/bottomBack" />

    <View
        android:id="@+id/bottomBack"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:background="@drawable/bottom_backlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>